--- a/style.css
+++ b/style.css
@@ -82,4 +82,46 @@ button {
     border-radius: 8px;
 }
 
+#result {
+    margin-top: 20px;
+    font-size: 24px;
+    color: #333;
+}
+.memory-board {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 20px;
+}
 
+.memory-card {
+    width: 100px;
+    height: 140px;
+    margin: 10px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+    position: relative;
+    background-color: #ffffff;
+    overflow: hidden;
+}
+
+.card-back {
+    width: 100%;
+    height: 100%;
+    background-color: #930b93;
+    border-radius: 8px;
+}
+
+.card-front {
+    width: 100%;
+    height: 100%;
+    border-radius: 8px;
+}
+
+#memoryResult {
+    margin-top: 20px;
+    font-size: 24px;
+    text-align: center;
+    color: #333;
+}
